# FSR-AI

./: README.md  build-profile.json5
AppScope/: app.json5
entry/: build-profile.json5  oh-package.json5
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt  fpr.cpp
entry/src/main/cpp/include/: Log.h  data_type.h  mindsporeLite.h  nn.h  ssd_util.h
entry/src/main/cpp/src/: depthanything.cpp  eyetracking.cpp  fpr.cpp  mobilenetv2.cpp  rknnbenchmark.cpp
entry/src/main/cpp/src/utils/: mindsporeLite.cpp  nn.cpp  ssd_util.cpp
entry/src/main/cpp/types/libdepthanything/: index.d.ts  oh-package.json5
entry/src/main/cpp/types/libeyetracking/: index.d.ts  oh-package.json5
entry/src/main/cpp/types/libfpr/: index.d.ts  oh-package.json5
entry/src/main/cpp/types/libmobilenetV2/: index.d.ts  oh-package.json5
entry/src/main/cpp/types/librknnbenchmark/: index.d.ts  oh-package.json5
entry/src/main/cpp/types/libssd300/: index.d.ts  oh-package.json5
entry/src/main/ets/: 123.ets
entry/src/main/ets/component/: ReturnBtn.ets  TopBar.ets
entry/src/main/ets/entryability/: EntryAbility.ts
entry/src/main/ets/model/classification/: CameraModel.ets
entry/src/main/ets/model/depthanything/: CameraModel.ets
entry/src/main/ets/model/msclassification/: CameraModel.ets
entry/src/main/ets/model/objectdetect/: CameraModel.ets
entry/src/main/ets/model/reconstruction/: CameraModel.ets
entry/src/main/ets/model/rknnface/: CameraModel.ets
entry/src/main/ets/model/rknnhandpose/: CameraModel.ets  pts.ets
entry/src/main/ets/model/rknnseg/: CameraModel.ets
entry/src/main/ets/model/rknnsocket/: rknnSokcet.ets
entry/src/main/ets/model/rknntextdec/: CameraModel.ets
entry/src/main/ets/model/rknnyolo/: CameraModel.ets
entry/src/main/ets/model/rknnyolomulti/: CameraModel.ets
entry/src/main/ets/pages/: Classification.ets  Home.ets  Index.ets  MsDepthAnything.ets  MsFPR.ets  MsMobilenetV2.ets  ObjectDetect.ets  RknnHandpose.ets  RknnRetinaFace.ets  RknnSeg.ets  RknnTextDec.ets  RknnYolo.ets  RknnYoloMulti.ets
entry/src/main/ets/utlis/: Base64Image.ets  ImageNet2012Labels.ets  Logger.ts  PermissionUtils.ets
entry/src/main/resources/base/profile/: main_pages.json
entry/src/main/resources/en_US/element/: string.json
entry/src/main/resources/rawfile/: FPR-oh.ms
entry/src/main/resources/zh_CN/element/: string.json
